methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:36: error: not enough arguments for method makeFlowers: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  makeFlowers()
             ^